# news-portal-version2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SETUP.md  prd.md  test_integration.py
.github/chatmodes/: 4.1-Beast.chatmode.md  4.1-Database.md  4.1-Github.chatmode.md  4.1-Playwright.chatmode.md  prd.chatmode.md
backend/: README.md  requirements.txt  run.py
docs/: system-architecture.md
fastapi-optimized-project/: README.md  add_year_column.py  alembic.ini  create_user.py  pyproject.toml  requirements.txt
fastapi-optimized-project/alembic/: env.py
fastapi-optimized-project/alembic/versions/: add_user_read_articles_table.py  add_year_field_to_vision_items.py  f396d99fa892_add_crawled_content_fields_to_rss_.py
fastapi-optimized-project/app/: __init__.py  main.py
fastapi-optimized-project/app/api/v1/endpoints/: __init__.py  projects.py  rss.py  vision_board.py
fastapi-optimized-project/app/core/: cache.py  config.py
fastapi-optimized-project/app/db/: base.py  crud_project.py  crud_rss.py  crud_vision_board.py  session.py
fastapi-optimized-project/app/models/: rss.py  user.py  vision_board.py
fastapi-optimized-project/app/schemas/: project.py  user.py  user_read_articles.py  vision_board.py
fastapi-optimized-project/app/services/: rss_service.py  s3_service.py  scheduler_service.py
fastapi-optimized-project/tests/: conftest.py  test_rss.py  test_users.py  test_vision_board.py
frontend/: next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
tasks/: README.md  project-tracking.md  task-breakdown-summary.md
(+116 files in other folders)
